// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ws reducer connection 1`] = `
Object {
  "connection": true,
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer default 1`] = `
Object {
  "connection": false,
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer status 1`] = `
Object {
  "connection": true,
  "status": Array [],
  "tokens": Array [],
}
`;

exports[`ws reducer tokens 1`] = `
Object {
  "connection": true,
  "status": Array [],
  "tokens": Array [],
}
`;
